--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7147d8; }
+  background: #f905cf; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #399099; }
+  background: #a890c2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #af895e; }
+  background: #8384fb; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #cc65e6; }
+  background: #d724f1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #89dd70; }
+  background: #7055b3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e3fbfc; }
+  background: #8d1cb7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #43b945; }
+  background: #d54995; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #13c9bf; }
+  background: #adc773; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e27775; }
+  background: #581ee3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d9e30a; }
+  background: #14b83b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d7c3fe; }
+  background: #6994ff; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d09cb3; }
+  background: #964a11; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8aeb57; }
+  background: #fa969a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3eb6a7; }
+  background: #0dbcd9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0c8c19; }
+  background: #0fe91d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7a25d2; }
+  background: #05f79d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #922bff; }
+  background: #f2cf5c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b427cb; }
+  background: #e213bc; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #17136d; }
+  background: #ea30b1; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d0065b; }
+  background: #d7d211; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #df6bce; }
+  background: #c4d376; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #12c74e; }
+  background: #b9f304; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4de98a; }
+  background: #4b62e5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #28a7d6; }
+  background: #66edc1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e37d55; }
+  background: #137e76; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c1f877; }
+  background: #3bfa23; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #29053f; }
+  background: #fd05d3; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a80190; }
+  background: #682e95; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8ea10c; }
+  background: #20a6e9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #26ffdb; }
+  background: #e9f4c9; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1f4bbb; }
+  background: #dea4ff; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e9056e; }
+  background: #0d7d17; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a9f96e; }
+  background: #a0d3bd; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #793656; }
+  background: #0cc471; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ac2228; }
+  background: #7f8b47; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #99cdba; }
+  background: #fec08f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d1c5e6; }
+  background: #4a4ad6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6d0a88; }
+  background: #6beb26; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #723ddb; }
+  background: #4101ff; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #99c39b; }
+  background: #cce1db; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #757171; }
+  background: #d63c6e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2defc3; }
+  background: #e694df; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c7cc78; }
+  background: #8b1d77; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a4dfb3; }
+  background: #31b4f3; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3f38c8; }
+  background: #62a35e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5a4f18; }
+  background: #992568; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #572870; }
+  background: #4fb267; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #763649; }
+  background: #4e2c9d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #fa6d97; }
+  background: #80da8c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #48a30d; }
+  background: #3b5f29; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #645267; }
+  background: #91f46b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #148445; }
+  background: #6a2050; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b4d005; }
+  background: #af3995; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #039fe6; }
+  background: #d0c324; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5f8f4b; }
+  background: #3db79d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #050d61; }
+  background: #c996cc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a92b31; }
+  background: #44670d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #685021; }
+  background: #3a77e1; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a80764; }
+  background: #277320; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8723cb; }
+  background: #83ba8d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cb88b7; }
+  background: #3cec19; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d927a6; }
+  background: #072a87; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #01e16d; }
+  background: #f197da; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3c7749; }
+  background: #d8c680; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2aa207; }
+  background: #f4a09a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #148a1f; }
+  background: #bd018c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e1989f; }
+  background: #153abc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ae404f; }
+  background: #982952; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #17cf72; }
+  background: #5ec5be; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #85e727; }
+  background: #657f64; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #51f971; }
+  background: #84ce7d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0b3369; }
+  background: #d32dea; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6e6eea; }
+  background: #22abc7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8bb9ac; }
+  background: #3b5f23; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c93173; }
+  background: #c4c169; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f28d2d; }
+  background: #524959; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b0fd36; }
+  background: #4e1e24; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #710e67; }
+  background: #1a73c3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9f6de3; }
+  background: #901f81; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #04fbef; }
+  background: #b51e60; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4d22da; }
+  background: #146925; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #23b4f7; }
+  background: #5bd547; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #38c91a; }
+  background: #3fe754; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d1ead8; }
+  background: #6e94a2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #402344; }
+  background: #7ef321; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #05e52e; }
+  background: #5abb71; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1978b2; }
+  background: #63ea4c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a94fd2; }
+  background: #c9138a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5b48cb; }
+  background: #9658ce; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ceb82d; }
+  background: #64d466; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b30621; }
+  background: #2281ab; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f77b6b; }
+  background: #a2797a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #162da7; }
+  background: #ca2705; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #18d51c; }
+  background: #e001eb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #428463; }
+  background: #1cbfed; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4a36ac; }
+  background: #9f7ac9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ffce52; }
+  background: #2aa3cf; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c1d5e1; }
+  background: #e81158; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4fc2df; }
+  background: #518e06; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b718ce; }
+  background: #7aa269; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17373,7 +17373,13 @@ input:not(:checked) + .slider-switch > .switch-non {
     min-width: 100%; }
 
   .table-wrapper-section table td {
-    font-size: 14px; } }
+    font-size: 14px; }
+
+  .guide-img-border-div {
+    padding: 10px; }
+
+  .guide-img-border-div img {
+    height: 100%; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
