--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -718,6 +718,12 @@
     .table-wrapper-section table td {
         font-size: 14px;
     }
+    .guide-img-border-div {
+        padding:10px;
+    }
+    .guide-img-border-div img {
+        height: 100%;
+    }
 }
 
 
