--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f905cf; }
+  background: #c8283d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a890c2; }
+  background: #576c74; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8384fb; }
+  background: #cf9d24; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d724f1; }
+  background: #9766a4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7055b3; }
+  background: #7a1bdf; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8d1cb7; }
+  background: #72a8ea; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d54995; }
+  background: #84abf5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #adc773; }
+  background: #d16d7f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #581ee3; }
+  background: #f254af; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #14b83b; }
+  background: #3b0507; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6994ff; }
+  background: #d312e8; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #964a11; }
+  background: #bcfa2c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #fa969a; }
+  background: #b1e403; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0dbcd9; }
+  background: #8f2b0c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0fe91d; }
+  background: #f94d93; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #05f79d; }
+  background: #29ed8b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f2cf5c; }
+  background: #5538e7; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e213bc; }
+  background: #8f3f2d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ea30b1; }
+  background: #ca1fdd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d7d211; }
+  background: #f92257; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c4d376; }
+  background: #b10f22; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b9f304; }
+  background: #166e22; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4b62e5; }
+  background: #d8fa0e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #66edc1; }
+  background: #60a5d5; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #137e76; }
+  background: #a04d94; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3bfa23; }
+  background: #afbcaf; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #fd05d3; }
+  background: #c389ae; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #682e95; }
+  background: #5df320; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #20a6e9; }
+  background: #3ec394; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e9f4c9; }
+  background: #d7490f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #dea4ff; }
+  background: #54c1e2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0d7d17; }
+  background: #c08627; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a0d3bd; }
+  background: #a0cfa1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0cc471; }
+  background: #2f1354; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7f8b47; }
+  background: #6b41e6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fec08f; }
+  background: #f91383; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4a4ad6; }
+  background: #5a2828; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6beb26; }
+  background: #ed85a0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4101ff; }
+  background: #15d0c3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #cce1db; }
+  background: #985477; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d63c6e; }
+  background: #6fb6d3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e694df; }
+  background: #e72f47; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8b1d77; }
+  background: #bd8f7f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #31b4f3; }
+  background: #edf836; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #62a35e; }
+  background: #bae6b7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #992568; }
+  background: #806895; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #4fb267; }
+  background: #fdfbfb; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4e2c9d; }
+  background: #b31786; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #80da8c; }
+  background: #0adda7; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3b5f29; }
+  background: #f17c1b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #91f46b; }
+  background: #9a128e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6a2050; }
+  background: #98b435; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #af3995; }
+  background: #4a3bb5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d0c324; }
+  background: #d97cb1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3db79d; }
+  background: #76b37b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c996cc; }
+  background: #bb9af3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #44670d; }
+  background: #c6c930; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3a77e1; }
+  background: #019b8a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #277320; }
+  background: #ad7904; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #83ba8d; }
+  background: #87a38c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3cec19; }
+  background: #c48f3c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #072a87; }
+  background: #7930ca; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f197da; }
+  background: #6dbab3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d8c680; }
+  background: #3595d4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f4a09a; }
+  background: #d86d72; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bd018c; }
+  background: #b1e2dd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #153abc; }
+  background: #1ce664; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #982952; }
+  background: #b9e2a2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5ec5be; }
+  background: #943bb8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #657f64; }
+  background: #e256c6; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #84ce7d; }
+  background: #7ca257; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d32dea; }
+  background: #ef6659; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #22abc7; }
+  background: #813c65; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3b5f23; }
+  background: #fb0b5a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c4c169; }
+  background: #99bf36; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #524959; }
+  background: #505561; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4e1e24; }
+  background: #ea704c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1a73c3; }
+  background: #0d9ef7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #901f81; }
+  background: #0b2859; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b51e60; }
+  background: #1efd11; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #146925; }
+  background: #99d196; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5bd547; }
+  background: #4291a3; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3fe754; }
+  background: #408c72; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6e94a2; }
+  background: #47a1e4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7ef321; }
+  background: #525886; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5abb71; }
+  background: #40683c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #63ea4c; }
+  background: #ee0e5e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c9138a; }
+  background: #3af917; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9658ce; }
+  background: #8b9f3f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #64d466; }
+  background: #de61ce; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2281ab; }
+  background: #f68a3b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a2797a; }
+  background: #e6fcd8; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ca2705; }
+  background: #b7d00d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e001eb; }
+  background: #333d40; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1cbfed; }
+  background: #63a97d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9f7ac9; }
+  background: #b4cb86; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2aa3cf; }
+  background: #039724; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e81158; }
+  background: #ab05f9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #518e06; }
+  background: #42e549; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7aa269; }
+  background: #9b743c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16903,7 +16903,7 @@ input:not(:checked) + .slider-switch > .switch-non {
   color: #4C4C4C; }
 
 .guide-img-border-div {
-  border: 1px solid #9A9A9A;
+  border: 1px solid #EAEAEA;
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -16911,8 +16911,88 @@ input:not(:checked) + .slider-switch > .switch-non {
   width: 100%; }
 
 .guide-img-border-div img {
-  width: 100%;
+  width: 100%; }
+
+.guide-img-border-div .img-hieght-half {
   height: 50vh; }
+
+.main {
+  display: grid;
+  grid-template-columns: 20% 1fr;
+  grid-template-rows: 10% auto 10%;
+  align-items: center;
+  grid-gap: 7px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  box-sizing: border-box; }
+
+#left {
+  box-sizing: border-box;
+  display: block;
+  grid-row: 2;
+  grid-column: 1;
+  align-self: center;
+  /* position: fixed; */ }
+
+#right {
+  box-sizing: border-box;
+  grid-row: 1 / 3 span;
+  grid-column: 2;
+  align-self: center; }
+
+.left-guide-nav-div ul li {
+  font-size: 16px;
+  margin: 25px 0px;
+  font-weight: 600;
+  color: #4C4C4C; }
+
+.left-guide-nav-div ul li a {
+  font-size: 16px;
+  font-weight: 600;
+  color: #4C4C4C;
+  text-decoration: none; }
+
+.left-guide-nav-div ul li ul {
+  margin-left: 20px; }
+
+.left-guide-nav-div ul li ul li {
+  font-size: 15px;
+  margin: 10px 0px;
+  font-weight: 400; }
+
+.left-guide-nav-div ul li ul li a {
+  font-size: 15px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #4C4C4C; }
+
+#button-up {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 15px;
+  transition: background-color .3s, opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+  border-radius: 50%; }
+
+#button-up.show {
+  opacity: 0.6;
+  visibility: visible;
+  cursor: pointer; }
+
+#button-up img {
+  position: absolute;
+  background: white;
+  padding: 8px;
+  border-radius: 50%;
+  width: 50px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
@@ -17378,7 +17458,7 @@ input:not(:checked) + .slider-switch > .switch-non {
   .guide-img-border-div {
     padding: 10px; }
 
-  .guide-img-border-div img {
+  .guide-img-border-div img, .guide-img-border-div .img-hieght-half {
     height: 100%; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
